fixed title spacing?

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ p {
   font-family: 'Sacramento', cursive;
   font-size: 6rem;
   line-height: 1.5;
-  margin-bottom: 0;
-  padding-bottom: 0;
+  margin: 10px 10px 0;
 }
 
 .welcome-text {
